Manifest pwa metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>O'Good Food Yaounde - Menu</title>
+    <meta name="title" content="O'Good Food Yaounde - Menu" />
+    <meta
+      name="description"
+      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.
+    Explorez notre menu ici."
+    />
+    <meta
+      name="keywords"
+      content="O'Good Food Yaoundé, menu O'Good Food Yaoundé, restaurant Yaoundé, manger Yaoundé, cuisine Yaoundé, bons restaurants Yaoundé, livraison repas Yaoundé, repas à emporter Yaoundé, spécialités O'Good Food Yaoundé, plats O'Good Food Yaoundé, cuisine locale Yaoundé, plats africains Yaoundé, fast-food Yaoundé, burger Yaoundé, pizza Yaoundé, poulet Yaoundé, poisson Yaoundé, dessert Yaoundé, petit-déjeuner Yaoundé, déjeuner Yaoundé, dîner Yaoundé, restaurant familial Yaoundé, réservation restaurant Yaoundé"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://menu-ogoodfoodyaounde.pages.dev/"
+    />
+    <meta property="og:title" content="O'Good Food Yaounde - Menu" />
+    <meta
+      property="og:description"
+      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.
+Explorez notre menu ici."
+    />
+    <meta
+      property="og:image"
+      content="https://menu-ogoodfoodyaounde.pages.dev/preview.jpg"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://menu-ogoodfoodyaounde.pages.dev/"
+    />
+    <meta property="twitter:title" content="O'Good Food Yaounde - Menu" />
+    <meta
+      property="twitter:description"
+      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.
+Explorez notre menu ici."
+    />
+    <meta
+      property="twitter:image"
+      content="https://menu-ogoodfoodyaounde.pages.dev/preview.jpg"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     <link rel="stylesheet" href="/css/style.css" />
     <title>O'Good Food Yaounde | Menu</title>
   </head>
