Manifest pwa metadata

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
@@ -26,8 +28,7 @@
     <meta property="og:title" content="O'Good Food Yaounde - Menu" />
     <meta
       property="og:description"
-      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.
-Explorez notre menu ici."
+      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.\nExplorez notre menu ici."
     />
     <meta
       property="og:image"
@@ -43,8 +44,7 @@ Explorez notre menu ici."
     <meta property="twitter:title" content="O'Good Food Yaounde - Menu" />
     <meta
       property="twitter:description"
-      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.
-Explorez notre menu ici."
+      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.\nExplorez notre menu ici."
     />
     <meta
       property="twitter:image"
