--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta name="title" content="O'Good Food Yaounde - Menu" />
     <meta
       name="description"
-      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food.
-    Explorez notre menu ici."
+      content="Découvrez tous les bons plats qu'on vous propose chez O'Good Food. Explorez notre menu ici."
     />
     <meta
       name="keywords"
